--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             Enter the code below to confirm your email address.
         </p>
         <div class="container2">
-            <input type="number" min="0" max="9" placeholder="0" class="otp" required>
-            <input type="number" min="0" max="9" placeholder="0" class="otp" required>
-            <input type="number" min="0" max="9" placeholder="0" class="otp" required>
-            <input type="number" min="0" max="9" placeholder="0" class="otp" required>
-            <input type="number" min="0" max="9" placeholder="0" class="otp" required>
-            <input type="number" min="0" max="9" placeholder="0" class="otp" required>
+            <input type="number" id="zero" min="0" max="9" placeholder="0" class="otp-input" maxlength="1"  data-number="0" required>
+            <input type="number" id="one" min="0" max="9" placeholder="0" class="otp-input" maxlength="1"  data-number="1" required>
+            <input type="number" id="two" min="0" max="9" placeholder="0" class="otp-input" maxlength="1"  data-number="2" required>
+            <input type="number" id="three" min="0" max="9" placeholder="0" class="otp-input" maxlength="1"  data-number="3" required>
+            <input type="number" id="four" min="0" max="9" placeholder="0" class="otp-input" maxlength="1"  data-number="4" required>
+            <input type="number" id="five" min="0" max="9" placeholder="0" class="otp-input" maxlength="1"  data-number="5" required>
         </div>
     
     <small class="info">
